finishing touches and commentary

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+
+	<!--HEADER-->
+
 	<header>
 		<div class="container-fluid">
 			<div class="hero">
@@ -36,6 +39,9 @@
 			</div>
 		</div>
 	</header>
+
+	<!--SECTION ABOUT-->
+
 	<section class="about">
 		<div class="container-fluid">
 			<i class="fas fa-phone"></i>
@@ -54,6 +60,9 @@
 			</div>
 		</div>
 	</section>
+
+	<!--SECTION SERVICES-->
+
 	<section class="services">
 		<div class="container-fluid">
 			<h2>Services</h2>
@@ -84,6 +93,9 @@
 			</div>
 		</div>
 	</section>
+
+	<!--SECTION PROJECTS-->
+
 	<section class="projects">
 		<div class="container-fluid">
 			<h2>Our projects</h2>
@@ -221,6 +233,9 @@
 			<button>More projects</button>
 		</div>
 	</section>
+
+	<!--SECTION TEAM-->
+
 	<section class="team">
 		<div class="container-fluid">
 			<h2>Our team</h2>
@@ -280,6 +295,9 @@
 		</div>
 		<img src="/images/Paginator.png" alt="dots" class="dots">
 	</section>
+
+	<!--SECTION CLIENTS-->
+
 	<section class="clients">
 		<div class="container-fluid">
 			<h2>Happy clients</h2>
@@ -316,6 +334,9 @@
 			</div>
 		</div>
 	</section>
+
+	<!--SECTION PRICES-->
+
 	<section class="prices">
 		<div class="container-fluid">
 			<h2>Price</h2>
@@ -384,6 +405,9 @@
 			</div>
 		</div>
 	</section>
+
+	<!--SECTION PREMIUM-->
+
 	<section class="premium">
 		<div class="container-fluid">
 			<h2>Premium</h2>
@@ -429,6 +453,9 @@
 			<button>Get in touch</button>
 		</div>
 	</section>
+
+	<!--SECTION FACTS-->
+
 	<section class="facts">
 		<div class="container-fluid">
 			<h2>Some facts</h2>
@@ -458,8 +485,10 @@
 				</div>
 			</div>
 			<div class="socials">
-				<img src="/images/Share.png">
-				<p>Tell about us:</p>
+				<div class="share">
+					<img src="/images/Share.png">
+					<p>Tell about us:</p>
+				</div>
 				<i class="fab fa-twitter"></i>152
 				<i class="fab fa-linkedin-in"></i>31
 				<i class="fab fa-facebook-f"></i>165
@@ -468,27 +497,38 @@
 			</div>
 		</div>
 	</section>
+
+	<!--SECTION CONTACT-->
+
 	<section class="contact">
 		<div class="container-fluid">
 			<h2>CONTACT US</h2>
 			<h3>our agency located in Melbourne, Australia</h3>
 			<form>
 				<div class="form-group row">
-					<div class="col-lg-5 col-md-12 col-sm-12">
-						<input type="text" value="Name" class="personal">
+					<div class="col-lg-6 col-md-12 col-sm-12">
+						<div  class="personal">
+							<input type="text" value="Name">
+						</div>
 					</div>
-					<div class="col-lg-5 col-md-12 col-sm-12">
-						<input type="text" value="Email" class="personal">
+					<div class="col-lg-6 col-md-12 col-sm-12">
+						<div class="personal">
+							<input type="text" value="Email">
+						</div>
 					</div>
 				</div> 
 				<div class="form-group row">
 					<div class="col-lg-11 col-md-12 col-sm-12">
-						<input type="text" value="Subject" class="topic">
+						<div class="topic">
+							<input type="text" value="Subject">
+						</div>
 					</div>
 				</div>
 				<div class="form-group row">
 					<div class="col-lg-11 col-md-12 col-sm-12">
-						<input type="text" value="Message" class="topic">
+						<div class="topic">
+							<input type="text" value="Message">
+						</div>
 					</div>
 				</div>
 			</form>
@@ -504,6 +544,9 @@
 			</div>
 		</div>
 	</section>
+
+	<!--FOOTER-->
+
 	<footer>
 		<div class="container">
 			<div class="row">
@@ -531,6 +574,5 @@
 			</div>
 		</div>
 	</footer>
-	<script src="https://cdn.jsdelivr.net/bootstrap.native/1.0.4/bootstrap-native.js"></script>
 </body>
 </html>
