--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<p>Call us: +00 0 1234 5678</p>
 					<button>get in touch!</button>
 				</div>
-				<img src="/images/Paginator.png" alt="dots" class="dots">
+				<img src="images/Paginator.png" alt="dots" class="dots">
 			</div>
 		</div>
 	</header>
@@ -54,7 +54,7 @@
 						<button>Learn more</button>
 					</div>
 					<div class="col-lg-5 col-md-12 col-sm-12">
-						<img src="/images/Video.png" alt="video" class="video">
+						<img src="images/Video.png" alt="video" class="video">
 					</div>
 				</div>
 			</div>
@@ -70,22 +70,22 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-3 col-md-6 icon">
-						<img src="/images/Quality.png" alt="quality">
+						<img src="images/Quality.png" alt="quality">
 						<h4>High quality<br>design</h4>
 						<P>Praesent metus urna, feugiata placerat elementum</P>
 					</div>
 					<div class="col-lg-3 col-md-6 icon">
-						<img src="/images/Star.png" alt="star">
+						<img src="images/Star.png" alt="star">
 						<h4 class="modern">Modern design</h4>
 						<P>Praesent metus urna, feugiata placerat elementum</P>
 					</div>
 					<div class="col-lg-3 col-md-6 icon">
-						<img src="/images/Clock.png" alt="clock">
+						<img src="images/Clock.png" alt="clock">
 						<h4>Regular<br>update</h4>
 						<P>Praesent metus urna, feugiata placerat elementum</P>
 					</div>
 					<div class="col-lg-3 col-md-6 icon">
-						<img src="/images/Support.png" alt="support">
+						<img src="images/Support.png" alt="support">
 						<h4>Fast and free<br>support</h4>
 						<P>Praesent metus urna, feugiata placerat elementum</P>
 					</div>
@@ -121,7 +121,7 @@
 									<h4>About</h4>
 									<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 								</div>
-								<img src="/images/Img1.png" alt="img1">
+								<img src="images/Img1.png" alt="img1">
 							</div>
 						</div>
 						<div class="col-lg-3 col-md-6 col-sm-12">
@@ -130,7 +130,7 @@
 									<h4>About</h4>
 									<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 								</div>
-								<img src="/images/Img2.jpg" alt="img2">
+								<img src="images/Img2.jpg" alt="img2">
 							</div>
 						</div>
 						<div class="col-lg-3 col-md-6 col-sm-12">
@@ -139,7 +139,7 @@
 									<h4>About</h4>
 									<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 								</div>
-								<img src="/images/Img3.png" alt="img3">
+								<img src="images/Img3.png" alt="img3">
 							</div>
 						</div>
 						<div class="col-lg-3 col-md-6 col-sm-12">
@@ -148,45 +148,7 @@
 									<h4>About</h4>
 									<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 								</div>
-								<img src="/images/Img4.png" alt="img4">
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-lg-3 col-md-6 col-sm-12">
-							<div class="photo">
-								<div class="layer">
-									<h4>About</h4>
-									<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
-								</div>
-								<img src="/images/Img5.png" alt="img5">
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-6 col-sm-12">
-							<div class="photo">
-								<div class="layer">
-									<h4>About</h4>
-									<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
-								</div>
-								<img src="/images/Img6.png" alt="img6">
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-6 col-sm-12">
-							<div class="photo">
-								<div class="layer">
-									<h4>About</h4>
-									<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
-								</div>
-								<img src="/images/Img7.png" alt="img7">
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-6 col-sm-12">
-							<div class="photo">
-								<div class="layer">
-									<h4>About</h4>
-									<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
-								</div>
-								<img src="/images/Img8.png" alt="img8">
+								<img src="images/Img4.png" alt="img4">
 							</div>
 						</div>
 					</div>
@@ -197,7 +159,7 @@
 									<h4>About</h4>
 									<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 								</div>
-								<img src="/images/Img9.png" alt="img9">
+								<img src="images/Img5.png" alt="img5">
 							</div>
 						</div>
 						<div class="col-lg-3 col-md-6 col-sm-12">
@@ -206,7 +168,7 @@
 									<h4>About</h4>
 									<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 								</div>
-								<img src="/images/Img10.png" alt="img10">
+								<img src="images/Img6.png" alt="img6">
 							</div>
 						</div>
 						<div class="col-lg-3 col-md-6 col-sm-12">
@@ -215,7 +177,7 @@
 									<h4>About</h4>
 									<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 								</div>
-								<img src="/images/Img11.png" alt="img11">
+								<img src="images/Img7.png" alt="img7">
 							</div>
 						</div>
 						<div class="col-lg-3 col-md-6 col-sm-12">
@@ -224,7 +186,45 @@
 									<h4>About</h4>
 									<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 								</div>
-								<img src="/images/Img12.png" alt="img12">
+								<img src="images/Img8.png" alt="img8">
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-lg-3 col-md-6 col-sm-12">
+							<div class="photo">
+								<div class="layer">
+									<h4>About</h4>
+									<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
+								</div>
+								<img src="images/Img9.png" alt="img9">
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-6 col-sm-12">
+							<div class="photo">
+								<div class="layer">
+									<h4>About</h4>
+									<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
+								</div>
+								<img src="images/Img10.png" alt="img10">
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-6 col-sm-12">
+							<div class="photo">
+								<div class="layer">
+									<h4>About</h4>
+									<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
+								</div>
+								<img src="images/Img11.png" alt="img11">
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-6 col-sm-12">
+							<div class="photo">
+								<div class="layer">
+									<h4>About</h4>
+									<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
+								</div>
+								<img src="images/Img12.png" alt="img12">
 							</div>
 						</div>
 					</div>
@@ -244,7 +244,7 @@
 				<div class="row">
 					<div class="col-lg-4 col-md-4 col-sm-12">
 						<div class="person">
-							<img src="/images/Img_team_1.png" alt="person1">
+							<img src="images/Img_team_1.png" alt="person1">
 							<h3>Jane Doe</h3>
 							<p>Master mind</p>
 							<div class="socials">
@@ -260,7 +260,7 @@
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-12">
 						<div class="person">
-							<img src="/images/Img_team_2.png" alt="person2">
+							<img src="images/Img_team_2.png" alt="person2">
 							<h3>Mike Shiller</h3>
 							<p>Creative head</p>
 							<div class="socials">
@@ -276,7 +276,7 @@
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-12">
 						<div class="person">
-							<img src="/images/Img_team_3.png" alt="person3">
+							<img src="images/Img_team_3.png" alt="person3">
 							<h3>Anna Johns</h3>
 							<p>Technical lead</p>
 							<div class="socials">
@@ -293,7 +293,7 @@
 				</div>
 			</div>
 		</div>
-		<img src="/images/Paginator.png" alt="dots" class="dots">
+		<img src="images/Paginator.png" alt="dots" class="dots">
 	</section>
 
 	<!--SECTION CLIENTS-->
@@ -302,33 +302,33 @@
 		<div class="container-fluid">
 			<h2>Happy clients</h2>
 			<h3>Client reviews</h3>
-			<img src="/images/Img_client.png" alt="client">
+			<img src="images/Img_client.png" alt="client">
 			<h4>John Doe</h4>
 			<p>Head Of PR Departament</p>
-			<img class="quotes" src="/images/quotes.png" alt="quotes">
+			<img class="quotes" src="images/quotes.png" alt="quotes">
 			<p class="opinion">Praesent metus urna, feugiat a placerat vel, elementum at leo. Quisque vel fermentum ipsum. Nulla at facilisis est, vel condimentum ligula. consectetur. Fusce sed purus eros. Vivamus rhoncus, ipsum in tempus fermentum, orci leo facilisis purus</p>
 		</div>
-		<img src="/images/Paginator.png" alt="dots" class="dots">
+		<img src="images/Paginator.png" alt="dots" class="dots">
 		<div class="logos">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-2 col-md-4 col-sm-6">
-						<img src="/images/Logo_1.png" alt="logo1">
+						<img src="images/Logo_1.png" alt="logo1">
 					</div>
 					<div class="col-lg-2 col-md-4 col-sm-6">
-						<img src="/images/Logo_2.png" alt="logo2">
+						<img src="images/Logo_2.png" alt="logo2">
 					</div>
 					<div class="col-lg-2 col-md-4 col-sm-6">
-						<img src="/images/Logo_3.png" alt="logo3">
+						<img src="images/Logo_3.png" alt="logo3">
 					</div>
 					<div class="col-lg-2 col-md-4 col-sm-6">
-						<img src="/images/Logo_4.png" alt="logo4">
+						<img src="images/Logo_4.png" alt="logo4">
 					</div>
 					<div class="col-lg-2 col-md-4 col-sm-6">
-						<img src="/images/Logo_5.png" alt="logo5">
+						<img src="images/Logo_5.png" alt="logo5">
 					</div>
 					<div class="col-lg-2 col-md-4 col-sm-6">
-						<img src="/images/Logo_6.png" alt="logo6">
+						<img src="images/Logo_6.png" alt="logo6">
 					</div>
 				</div>
 			</div>
@@ -416,11 +416,11 @@
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-lg-5 col-md-12 col-sm-12">
-							<img src="/images/Img.png" alt="package" class="packages">
+							<img src="images/Img.png" alt="package" class="packages">
 						</div>
 						<div class="col-lg-6 col-md-12 col-sm-12">
 							<div class="wrapper">
-								<img src="/images/icon.png" alt="check">
+								<img src="images/icon.png" alt="check">
 								<div class="feature">
 									<h4>First Feature</h4>
 									<p>Praesent metus urna, feugiat a placerat vel, elementum at leo.<br>
@@ -432,14 +432,14 @@
 		    					</div>
 		    				</div>
 	    					<div class="wrapper">
-								<img src="/images/icon.png" alt="check">
+								<img src="images/icon.png" alt="check">
 								<div class="feature">
 									<h4>Second Feature</h4>
 									<p>Praesent metus urna, feugiat a placerat vel.</p>
 								</div>	
 							</div>
 							<div class="wrapper">	
-								<img src="/images/icon.png" alt="check">
+								<img src="images/icon.png" alt="check">
 								<div class="feature">
 									<h4>Third Feature</h4>
 									<p>Praesent metus urna, feugiat a placerat vel, elementum at leo.</p>
@@ -449,7 +449,7 @@
 					</div>
 				</div>
 			</div>
-			<img src="/images/Paginator.png" alt="dots" class="dots">
+			<img src="images/Paginator.png" alt="dots" class="dots">
 			<button>Get in touch</button>
 		</div>
 	</section>
@@ -486,7 +486,7 @@
 			</div>
 			<div class="socials">
 				<div class="share">
-					<img src="/images/Share.png">
+					<img src="images/Share.png">
 					<p>Tell about us:</p>
 				</div>
 				<i class="fab fa-twitter"></i>152
